--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "multer": "^1.4.5-lts.1",
     "node_module": "^0.0.0",
     "nodemon": "^3.1.3",
+    "path": "^0.12.7",
     "react-toastify": "^10.0.5",
     "validator": "^13.12.0"
   }
