--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,13 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.2",
+    "body-parser": "^1.20.2",
+    "bootstrap": "^5.3.3",
+    "braintree": "^3.24.0",
+    "braintree-web-drop-in": "^1.43.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
+    "express": "^4.19.2",
     "hamburger-react": "^2.5.1",
     "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
@@ -23,6 +29,7 @@
     "react-scripts": "5.0.1",
     "react-stars": "^2.2.5",
     "react-toastify": "^10.0.5",
+    "reactstrap": "^9.2.2",
     "styled-components": "^6.1.11",
     "web-vitals": "^2.1.4"
   },
