--- a/client/package.json
+++ b/client/package.json
@@ -31,6 +31,7 @@
     "react-toastify": "^10.0.5",
     "reactstrap": "^9.2.2",
     "styled-components": "^6.1.11",
+    "validator": "^13.12.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
